# map_compression

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.1.3  CMakeLists.txt.user.3.2-pre1  Readme.md  TODO  package.xml
Matlab/: getMeanDistance.m  poseSparcification.m
RT/: README  compute_rtens_variable_importance.m  cvpredict.m  friedman1.csv  init_bagging.m  init_extra_trees.m  init_mart.m  init_rf.m  init_single_rt.m  rtenslearn_c.mexa64  rtenslearn_c.mexmaci64  rtenspred.m  rtexample.m  run_compression.m
RT/rtree-c/: f-table.c  rtenslearn_c.c  rtenslearn_c.mexa64  tree-model.c  tree-model.h  tree-multiregr.c
cfg/: cloud_compare_color.xml  icp.yaml  icp_compress.yaml  icp_loc.yaml  icp_salient.yaml  input_filters.yaml  loadCRFResults.rviz  locTest.rviz  locTest_kitti.rviz  locTest_yq.rviz  loc_filters.yaml  loc_icp.yaml  loc_icp_kitti.yaml  loc_icp_park.yaml  loc_icp_yq.yaml  loc_laser_filters.yaml  loc_laser_filters_kitti.yaml  loc_laser_filters_park.yaml  loc_laser_filters_yq.yaml  loc_map_filters.yaml  loc_map_filters_kitti.yaml  loc_map_filters_yq.yaml  mapAccuLaser.rviz  mapCheck.rviz  mapCheck_kitti10.rviz  mapCheck_kitti10_part.rviz  mapCheck_park.rviz  mapCheck_yq.rviz  mapCutter.rviz  mapFilter.rviz  map_filters.yaml  normalViewer.rviz  randomSampleMap.rviz  scanFilter.rviz  scanRegister.rviz  sessionFilter.rviz
evaluation/: drawErrorHist.m  predict_effe.m  run.m
evaluation/localization/: getRotmError.m  getTransError.m  loadall_on_server.m  plot_201907.m  plot_201907_server.m  test.m  test2019chery.m  test_0922.m  test_2018.m  test_2019.m  test_201901.m  test_201907_kitti.m  test_201907_lamda.m  test_201907_yq.m  test_zxm.m  timing.m
evaluation/prediction/: drawErrorHist.m  just_save.m  park2019.m  precision.m  run.m
gurobi/: loopCompress.m  mip1.lp  result.txt  salientNumCnt.m  section.m  sectionTest.m  test.m  test.py
gurobi/ILP/: findMinb.m  section.m
gurobi/graph_cut/: GraphCutting.m  TSV  d1.m  findEdges.m  getMatlabGraph.m  getMinCutting.m  getPointMat.m  getPoseGraph.m  getPoseGraph_sparse.m  loopCutting.m  readme.md  writeVisTxt.m
gurobi/q_ILP_lamda/: DP_loopCompress.m  Uniform_loopCompress.m  get_min_cost.m  loopCompress.m  plotting_wy.m  run.m  run2.m  run3.m  run4.m  run_park.m  run_yq.m  run_yq_1.m  run_yq_2.m  salientNumCnt.m  section.m  section_compress.m
gurobi/test/: mip1.m
launch/: DBSCANFilter.launch  clusterMap.launch  errorDistribution.launch  formatTransfer.launch  genVisMatrix.launch  genWeightVector.launch  generateAllFeatures.launch  generateCRFFeatures.launch  generateOtherFeatures.launch  generateSlidingSamples.launch  kittiRegister.launch  labelLaser.launch  loadFinalResults.launch  loadProResult.launch  locTest.launch  mapAccuLaserIndex.launch  mapAccuLaserMultiple.launch  mapAccuLaserRange.launch  mapCheck.launch  mapCompare.launch  mapCompareSub.launch  mapCompresser.launch  mapCutter.launch  mapCutterTraj.launch  mapFeater.launch  mapFilter.launch  mapScoringIndex.launch  mapSessioner.launch  mapSummer.launch  matchOut.launch  randomSampleMap.launch  saveAllCRFFeatures.launch  saveAllFeatures.launch  savePointNetBinsFeatures.launch  savePointNetFeatures.launch  scanRegister.launch  sessionFilter.launch  voxelMap.launch
launch/before/: mapAccuLaser.launch  mapAccuLaserRange.launch  mapCompare.launch
launch/comparisons/: clusterMap.launch  mergeCloudForSaliency.launch  randomSampleMap.launch  runObserve.sh  runRandom.sh  runSaliency.sh  saliencyMap.launch  selectByObserver.launch  selectBySaliency.launch  splitCloudForSaliency.launch  voxelMap.launch
launch/learn_program/: compareDistribution.launch  errorDistribution.launch  generateAllFeatures.launch  loadFinalResults.launch  loadProResult.launch  mapCompresser.launch  mapCutterTraj.launch  mapCutterTraj_kitti.launch  mapCutterTraj_test.launch  mapCutterTraj_yq.launch  runCut.sh  runCut_201901.sh  runCut_201907.sh  runCut_kitti.sh  runCut_kitti_0727.sh  runCut_yq.sh  runCut_zxm.sh  runGen_201907.sh  runGen_dxq.sh  runLoad_201907.sh  shresholding_learn_score.m  splitCloudForSaliency.launch
launch/loc_test/: clusterMap.launch  locTest.launch  locTestServer.launch  locTest_kitti.launch  locTest_kitti_laptop.launch  locTest_kitti_server.launch  locTest_park.launch  locTest_park_laptop.launch  locTest_park_server.launch  locTest_yq_figure.launch  locTest_yq_laptop.launch  locTest_yq_server.launch  locTest_zxm.launch  randomSampleMap.launch  runLoc.sh  runLoc_ILP.sh  runLoc_all.sh  runLoc_all_icp_timing_laptop.sh  runLoc_kitti.sh  runLoc_learn.sh  runLoc_park.sh  runLoc_random.sh  runLoc_voxel.sh  run_kitti.sh  run_kitti_laptop.sh  run_kitti_server.sh  run_kitti_server_add.sh  run_park_server.sh  run_yq_laptop.sh  run_yq_server.sh  run_yq_server_add.sh  voxelMap.launch
launch/map_generation/: genVisMatrix.launch  genWeightVector.launch  mapFilter.launch  (+3 more)
prepare/: ForKITTIPoses.m  convertPLY.m  getDistribution.m  getMeanDistance_kitti.m  getMeanDistance_yq.m  poseSparse_yq.m  poseSparse_yq.m~  poseSparsification.m  poseSparsification_kitti.m  poseSparsification_yq.m  readVelodyne.m  run.m  seeCut.m  test.m
python/: mip1.py  test.py
random_forest/: COPY_FROM_GITHUB  Readme.md  final.m  newRun.m  precision_recall.m  random_test.m  runAll.m  split.m
src/: DBSCANFilter.cpp  DBSCANFilter.cpp.autosave  clusterMap.cpp  compareDistribution.cpp  errorDistribution.cpp  formatTransfer.cpp  genVisMatrix.cpp  genWeightVector.cpp  generateAllFeatures.cpp  generateCRFFeatures.cpp  generateOtherFeatures.cpp  generateSlidingSamples.cpp  kittiRegister.cpp  labelLaser.cpp  loadFinalResults.cpp  loadProResult.cpp  locTest.cpp  locTest.cpp.autosave  mapAccuLaserIndex.cpp  mapAccuLaserMultiple.cpp  mapAccuLaserRange.cpp  mapCheck.cpp  mapCompare.cpp  mapCompare.cpp.autosave  mapCompresser.cpp  mapCutter.cpp  mapCutterTraj.cpp  mapFeater.cpp  mapFilter.cpp  mapScoringIndex.cpp  mapSessioner.cpp  mapSummer.cpp  matchOut.cpp  randomSampleMap.cpp  readme  saveAllCRFFeatures.cpp  saveAllFeatures.cpp  savePointNetBinsFeatures.cpp  savePointNetFeatures.cpp  scanRegister.cpp  (+2 more)
(+162 files in other folders)
